<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOcreClaro2">

    <TextView
        android:id="@+id/textview_datatitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_datatitle"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/colorMarronOscuro"/>

    <EditText
        android:id="@+id/edittext_datatitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_datatitle"
        android:hint="@string/hint_title"
        android:textColorHint="@color/colorMarronOscuro"
        android:textColor="@color/colorMarronOscuro"/>

    <TextView
        android:id="@+id/textview_dataauthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_dataauthor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_datatitle"
        android:textColor="@color/colorMarronOscuro"/>

    <EditText
        android:id="@+id/edittext_dataauthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_dataauthor"
        android:hint="@string/hint_author"
        android:textColorHint="@color/colorMarronOscuro"
        android:textColor="@color/colorMarronOscuro"/>

    <TextView
        android:id="@+id/textview_datastatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_datastatus"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_dataauthor"
        android:textColor="@color/colorMarronOscuro"/>

    <RadioGroup
        android:id="@+id/radiogroup_datastatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_datastatus">

        <RadioButton
            android:id="@+id/radiobutton_want"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_want" />

        <RadioButton
            android:id="@+id/radiobutton_reading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_reading" />

        <RadioButton
            android:id="@+id/radiobutton_read"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_read" />
    </RadioGroup>

    <TextView
        android:id="@+id/textview_datarate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_rate"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiogroup_datastatus"
        android:textColor="@color/colorMarronOscuro"/>

    <RatingBar
        android:id="@+id/ratingbar_datarate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:rating="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_datarate" />

    <Button
        android:id="@+id/button_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text=""
        android:textColor="@color/colorAmbar"
        android:background="@drawable/button_confirm_background"/>


</androidx.constraintlayout.widget.ConstraintLayout>